--- a/Amt-12 amzon/style.css
+++ b/Amt-12 amzon/style.css
@@ -535,3 +535,18 @@ border: 3px solid transparent;
     top: 35%;
     left:12px;
 }
+.box-c div img{
+    margin-left: 29px;
+    width: 250px;
+    height: 250px;
+}
+.box-d div img{
+width: 147px;
+height: 110px;
+margin-left: 5px;
+margin-right: 0px;
+
+}
+.box-d div span{
+    margin-bottom: 22px;
+}
